# eth-streamer

./: .dockerignore  Dockerfile  Makefile  README.md  default.env  docker-compose.yml  flake8.tests.ini  pyproject.toml  setup.cfg
app/: __main__.py  app.py  settings.py
app/domain/: node_rpc.py
app/resources/: node.py
app/usecases/: block_inspector.py  streamer.py
settings/: default.conf
tests/: conftest.py
tests/files/infura/: get_by_number.json  get_estimated_gas.json  get_estimated_gas_error.json  get_estimated_gas_rejected.json  get_transaction_receipt.json
tests/integration/: test_usecases.py
tests/unit/: test_node_resource.py
